@@ -1,3 +1,9 @@
+2016-03-01  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/ScanInventory.pm: A no-reuse is not a new labelled tape
+	* installcheck/Amanda_Taper_Scan_lexical.pl,
+	  installcheck/Amanda_Taper_Scan_oldest.pl,
+	  installcheck/Amanda_Taper_Scan_traditional.pl: Add check
+
 2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/Amanda_Rest_Runs.pl: Fix for Report/json.pm fix
 
